<resources>
    <string name="app_name">Calculator</string>
    <string name="sevenButtonText">7</string>
    <string name="eightButtonText">8</string>
    <string name="nineButtonText">9</string>
    <string name="fourButtonText">4</string>
    <string name="fiveButtonText">5</string>
    <string name="sixButtonText">6</string>
    <string name="oneButtonText">1</string>
    <string name="twoButtonText">2</string>
    <string name="threeButtonText">3</string>
    <string name="dotButton">&#8226;</string>
    <string name="equalButton">&#61;</string>
    <string name="zeroButtonText">0</string>
    <string name="addButton">&#43;</string>
    <string name="subtractButton">&#8211;</string>
    <string name="mulButton">&#215;</string>
    <string name="divButton">&#247;</string>


</resources>
